# Archive

./: README.md
Clipboard/: Cargo.toml
Clipboard/src/: main.rs
Scraper/: selenium_main.py
Sound/: code.cpp
Sound/SoundMVSC/: SoundMVSC.sln
Sound/SoundMVSC/SoundMVSC/: FileName.cpp  SoundMVSC.vcxproj
Sound/SoundMVSC/SoundMVSC/Debug/: vc143.idb
Sound/SoundMVSC/SoundMVSC/Debug/SoundMVSC.tlog/: SoundMVSC.lastbuildstate
Sound/SoundMVSC/SoundMVSC/x64/Debug/: vc143.idb
Sound/SoundMVSC/SoundMVSC/x64/Debug/SoundMVSC.tlog/: SoundMVSC.lastbuildstate
SoundRust/: Cargo.toml
SoundRust/src/: main.rs
ai_console/: Cargo.toml
ai_console/src/: main.rs
elsword_fusion_chance/: Cargo.toml
elsword_fusion_chance/src/: main.rs
outlook-python/: main.py
reminder/: Cargo.toml
reminder/src/: main.rs
rust_ai/: Cargo.toml
rust_ai/src/: main.rs
sticky_notes/: Cargo.toml
sticky_notes/src/: main.rs
tcp/src/: main.rs
wallpaper_rust/: Cargo.toml
wallpaper_rust/src/: main not Original.rs  main.rs
