[package]
name = "sticky_notes"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_egui = "0.29.0"
eframe = "0.28.1"
egui = "0.28.1"
egui-toast = "0.14.0"
egui_extras = "0.28.1"
env_logger = "0.11.5"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
substring = "1.4.5"
